--- a/src/App.scss
+++ b/src/App.scss
@@ -1,43 +1,24 @@
-.App {
-  text-align: center;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.app-container {
   display: flex;
   flex-direction: column;
   height: 100%;
-  font-size: 25px;
-  color: white;
+  min-height: 100%;
 
-  div.content {
-    flex: 1;
-  }
-}
+  background-color: grey;
 
-.App-link {
-  color: #61dafb;
-}
+  .site-content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    min-height: 100%;
+    
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+    .footer,
+    .header {
+      padding: 20px;
+      
+      text-align: center;
+      background-color: lightblue;
+    }
   }
 }
