--- a/src/Content.scss
+++ b/src/Content.scss
@@ -5,16 +5,24 @@
     padding: 20px;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
 
     flex: 1 0 auto;
 
     .content-sidebar {
+        display: flex;
+        flex: 1 0 auto;
+
         background-color: lightsteelblue;
+        padding: 20px;
     }
 
     .content-page {
+        display: flex;
+        flex: 6 0 auto;
+
         background-color: lightgrey;
+        padding: 20px;
     }
 }
