--- a/src/components/sidebar/Navbar.scss
+++ b/src/components/sidebar/Navbar.scss
@@ -17,11 +17,17 @@
             color: white;
             font-weight: bold;
 
-            margin-right: 20px;
+            margin-right: 40px;
             margin-left: 0;
 
             border: 0px solid;
-            border-radius: 15px 50px 30px;
+            border-radius: 50px 0 0 50px;
+
+            border: 5px solid transparent;
+            border-left-color: red;
+            border-right-color: transparent;
+
+            transition: ease-out 0.4s;
 
             &.active-link {
                 font-style: italic;
@@ -30,9 +36,15 @@
                 color: green;
 
                 margin-right: 0;
-                margin-left: 20px;
+                margin-left: 40px;
 
-                border-radius: 15px 50px 30px;
+                border-radius: 0 50px 50px 0;
+                border-left-color: transparent;
+                border-right-color: limegreen;
+            }
+
+            &:not(.active-link).notFound {
+                display: none;
             }
         }
     }
