--- a/src/components/sidebar/Navbar.scss
+++ b/src/components/sidebar/Navbar.scss
@@ -8,39 +8,39 @@
 
         .sidebar-link {
             display: flex;
-
-            padding: 5px;
-            margin: 5px;
             justify-content: center;
+
+            margin: 5px;
+            margin-right: 40px;
+            margin-left: 0px;
+
+            padding: 10px;
+
+            border: 0 solid transparent;
+            border-left-width: 10px;
+            border-right-width: 10px;
+
+            border-radius: 50px 0 0 50px;
+            border-left-color: lightsalmon;
+            border-right-color: transparent;
+
+            transition: ease-out 0.5s;
 
             background-color: black;
             color: white;
             font-weight: bold;
 
-            margin-right: 40px;
-            margin-left: 0;
-
-            border: 0px solid;
-            border-radius: 50px 0 0 50px;
-
-            border: 5px solid transparent;
-            border-left-color: red;
-            border-right-color: transparent;
-
-            transition: ease-out 0.4s;
-
             &.active-link {
-                font-style: italic;
-
-                background-color: lightgrey;
-                color: green;
-
                 margin-right: 0;
                 margin-left: 40px;
 
                 border-radius: 0 50px 50px 0;
                 border-left-color: transparent;
                 border-right-color: limegreen;
+
+                background-color: lightgrey;
+                color: green;
+                font-style: italic;
             }
 
             &:not(.active-link).notFound {
